# parallel-mean-shift

./: CMakeLists.txt  README.md  setup.py
lib/mean_shift/: CMakeLists.txt  cumean_shift.cu  cumean_shift_kernels.cu  cumean_shift_kernels.cuh  helper_cuda.h  mean_shift.cpp  mean_shift_postprocessing.cpp  mean_shift_postprocessing.h  ms_utils.h
lib/mean_shift/include/: cumean_shift.cuh  mean_shift.h
py_module/: CMakeLists.txt
py_module/mean_shift/: cumean_shift_py_wrappers.cu  cumean_shift_py_wrappers.h  mean_shift.py  mean_shift_py_module.cpp  mean_shift_py_module.h  mean_shift_py_module_utils.h  mean_shift_py_wrappers.cpp  mean_shift_py_wrappers.h  timer.hpp
tests/py_tests/: img_segmentation.ipynb  img_segmentation.py  ms_clustering_benchmark.py
tests/py_tests/py_utils/: dataset.py  plots.py
